--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,3 +22,5 @@ jobs:
       run: npm install
     - name: Run the unit tests
       run: npm run test:unit
+    - name: Display softuni username
+      run: echo "hyus314"
